kubernetes-manifest/gw-stage-devops.yaml
# ---
# apiVersion: security.istio.io/v1beta1
# kind: PeerAuthentication
# metadata:
#   name: planner-mtls
#   namespace: planner
# spec:
#   mtls:
#     mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devops-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "stage-dev.service.co.kr"
